--- a/style.css
+++ b/style.css
@@ -72,19 +72,36 @@
 .csd 
 {
 	display:grid;
-	grid-template-columns:1fr 1fr ;
-	grid-template-rows: 25% 25% ;
+	grid-template-columns:1fr 1fr ; 
+	grid-gap: 12px;
+	text-align: center;
 	grid-row-gap: 12px;
 	grid-column-gap: 12px;
-
-
+	background-color: rgba(75,56,65,0.4);
+	padding-top: 12px;
+	padding-right: 12px;
+	padding-left: 12px;
 }
 
-.csd1 h3
+.csd div:nth-child(even)
 {
-	text-align: center;
-	text-decoration-style: all;
+	background: #777;
 }
+
+.cs_prof > div
+{
+	display: grid;
+	grid-template-rows: 25%;
+
+}
+
+.cs_classes > div
+{
+	display: grid;
+	grid-template-rows: 25%;
+}
+
+
 
 
 
